syntax-analyzer/tests/test_errors1.c
int main() {
    int int a;          // error
    a = 10;
    int b = 8;          // error
    list float product;
    writeln("This is a string\n");
    // This is a comment
    return 0;
}